fixing low link to surrounding text contrast in essay sources detail

--- a/themes/atalanta/assets/scss/components/_component.scss
+++ b/themes/atalanta/assets/scss/components/_component.scss
@@ -747,8 +747,9 @@ sup {
 			word-wrap: break-all;
 			text-decoration: underline;
 
-			&:hover {
-				color: $orange;
+			&:hover, 
+			&:focus {
+				color: $orange_accessible;
 			}
 		}
 	}	
